--- a/www/index.html
+++ b/www/index.html
@@ -23,11 +23,17 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- In order to use jquery selectors rather than jqlite, it must be loaded before angular -->
+    <script src="lib/jQuery/dist/jquery.min.js"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+    <script src="lib/angular-animate/angular-animate.min.js"></script>
+    <script src="lib/angular-maphilight/lib/angular.maphilight.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
