--- a/www/index.html
+++ b/www/index.html
@@ -32,8 +32,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <script src="lib/angular-animate/angular-animate.min.js"></script>
-    <script src="lib/angular-maphilight/lib/angular.maphilight.js"></script>
+    <script src="lib/maphilight/jquery.maphilight.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
